--- a/src/App.css
+++ b/src/App.css
@@ -378,12 +378,14 @@ a{
   font-family: Italianno, serif;
   font-size:2rem;
   margin-bottom:1%;
+  margin-top:4%;
 }
 
 .footer-hours{
   font-family:Italiana, serif;
   font-style:italic;
   margin-bottom:1%;
+  padding:1%;
 }
 
 .footer-number{
@@ -401,4 +403,34 @@ a{
   font-family: serif;
   font-size:1.5rem;
   font-style:italic;
+}
+
+.about{
+  font-family:Italianno, serif;
+  font-weight:bold;
+  font-size: 5rem;
+  text-align:center;
+  margin-top:4%;
+  color:#99324C;
+}
+
+.img-container{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.img{
+  border-radius:50%;
+  max-height:50vh;
+}
+
+.about-paragraph{
+  text-align:center;
+  margin-top:4%;
+  font-weight:bold;
+  font-family:Italiana;
+  font-size:1.5rem;
+  font-style:italic;
+  color:#99334C;
 }
