--- a/src/App.css
+++ b/src/App.css
@@ -476,3 +476,342 @@ a{
   text-align:center;
   margin-top:1%;
 }
+
+@media (max-width: 599px){
+
+  .nav-wrapper{
+    outline:3px solid black;
+  }
+
+  .nav {
+    
+    outline:3px solid yellow;
+    height:35vh;
+    display:inline-block;
+    overflow:hidden;
+    width:100%;
+  
+  }
+  .carmslogo{
+    margin-top:3%;
+    width:15%;
+    height:20vh;
+  }
+  .nav-links {
+    margin-top:10%;
+    width: 100%;
+    font-family: "Italianno", serif;
+    
+  }
+  
+  .nav-links li {
+    font-size:2rem;
+    
+  }
+  
+
+  .carmslogo {
+    height: 15vh;
+  }
+  
+  .anim-h1{
+    font-size:2.5rem;
+
+  }
+  .container-img{
+    height:65vh;
+  }
+  .anim-p{
+    font-size:1.5rem;
+  
+  }
+  
+  .anim-p2{
+    font-size:1.5rem;
+  
+   
+  
+  }
+  
+  .anim-p3{
+    font-size:1.5rem;
+  }
+  
+  .button-container{
+    margin-top:8%;
+    
+  }
+  
+  
+  
+  .cta-menu{
+    padding:10px 16px;
+ 
+  
+  }
+  
+ 
+  
+ 
+  
+  .wine-section{
+      background-repeat: no-repeat cover;
+      background-size:cover;
+      max-height: 100%;
+      margin-top: 3%;
+      font-size: 1.5rem;
+      text-align:center;
+      display:flex;
+      justify-content: center;
+      color:beige;
+  }
+  
+      table th{
+        padding: 3rem;
+        color:grey;      
+       
+  
+        
+      }
+  
+      table td{
+        padding:10px;
+        font-weight:bold;
+        font-family:Italianno;
+        font-size:2.3rem;
+        color:#F7E7CE;
+      }
+      
+  .wine-heading{
+    font-weight:bold;
+    font-family:Italianno;
+    font-size:4rem;
+    color:#e2725b;
+    text-align:center;
+   
+  }
+    .wine{
+      font-size:3rem;
+      font-family:Italianno;
+      font-weight:500;
+      margin-top:3%;
+      color:#9A3B4E;
+    }
+  
+  .reservation-form input{
+    display:flex column;
+    justify-content:center;
+    align-items:center;
+  }
+  .reservations{
+    font-size:4rem;
+    text-align:center;
+    font-weight:bold;
+    font-family:Italianno;
+    max-height:15vh;
+    margin-top:5%;
+  
+  }
+  .reservation-container{
+    background:beige;
+  
+  
+  }
+  
+  
+  
+  
+  
+  .container{
+    background-repeat: no-repeat cover;
+    background-size: cover;
+    height: 130vh;
+    font-size: 2rem;
+   
+   
+  } 
+  .form-div .reservation-form{
+    display:flex column;
+    justify-content:center;
+    align-items:center;
+    height:50vh;
+    margin-top:4%;
+    width:100%;
+    
+  
+  }
+  
+  input{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    text-align:center;
+    margin-left:auto;
+    margin-right:auto;
+    width:18%;
+    height:5vh;
+    
+  }
+  
+  
+  
+  
+  
+  .paragraph{
+    font-size:2.5rem;
+    color: #99334D;
+    text-align:center;
+    font-family:Italiana,serif;
+    font-weight:500;
+    font-style:italic;
+    margin-top:4%;
+  
+    
+  
+  }
+  
+  label{
+    color:#F5F5DC;
+    font-size:1.4rem;
+    display:flex;
+    justify-content:center;
+    margin:1%;
+    font-weight:bold;
+  }
+  
+  
+  .div-button{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    margin-top:4%;
+  
+  }
+  
+  .div-button button{
+    padding:22px 100px;
+    border-radius:15px;
+    background:#E2725B;
+    opacity:.7;
+    color:beige;
+  }
+  .div-button button:hover{
+    background:beige;
+    color:#E2725B;
+  }
+    .parag{
+      font-size:2rem;
+      font-weight:500;
+      font-family:Italianno;
+      text-align:center;
+      margin-top:3%;
+      background-color:beige;
+    }
+  
+
+  
+  .carms{
+    display:flex column;
+    justify-content:center;
+    align-items:center;
+  }
+  
+  .footer{
+    font-size:1.2rem;
+   
+   
+    
+  }
+  
+ 
+  
+ 
+  
+
+  
+  .footer-number{
+    font-size:1.8rem;
+  
+  }
+  
+ 
+  
+  .footer-contact{
+   margin-bottom:3%;
+  }
+  
+  .about{
+    font-family:Italianno, serif;
+    font-weight:bold;
+    font-size: 5rem;
+    text-align:center;
+    margin-top:4%;
+    color:#99324C;
+  }
+  
+  .img-container{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+  }
+  
+  .img{
+    border-radius:50%;
+    max-height:50vh;
+  }
+  
+  .about-paragraph{
+    text-align:center;
+    margin-top:4%;
+    font-weight:bold;
+    font-family:Italiana;
+    font-size:1.5rem;
+    font-style:italic;
+    color:#99334C;
+  }
+  .dinner-header{
+    margin-top:5%;
+    text-align:center;
+    font-family:Italianno;
+    font-weight:bold;
+    font-size:4rem;
+    color:#e2725b;
+  }
+  
+  .background{
+    background-repeat: no-repeat cover;
+    background-size: cover;
+    height: 290vh;
+  }
+  
+  .section{
+    font-family:Italiana, serif;
+    font-weight:bold;
+    font-style:italic;
+    font-size:1.8rem;
+    color:#FADEB6;
+    text-align:center;
+    margin-top:3%;
+  
+  }
+  
+  .item{
+    font-size:1.5rem;
+    text-align:center;
+    margin-top:2%;
+    color:#8b0000;
+    font-weight: bold;
+  }
+  
+  .item-description{
+    font-family:Italiana;
+    font-weight:bold;
+    font-size:1rem;
+    color:white;
+    text-align:center;
+    margin-top:1%;
+  }
+
+
+
+}
