--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ table {
 .H2{
 	font-family: Italiana;
 	font-size: 1.2rem;
-	margin-top:2%;
+	margin-top:3%;
   font-style: italic;
   color: #F8F0E3;
   font-weight:500;
@@ -479,13 +479,10 @@ a{
 
 @media (max-width: 599px){
 
-  .nav-wrapper{
-    outline:3px solid black;
-  }
+ 
 
   .nav {
     
-    outline:3px solid yellow;
     height:35vh;
     display:inline-block;
     overflow:hidden;
@@ -717,20 +714,22 @@ a{
   }
   
   .footer{
-    font-size:1.2rem;
+    font-size:1.1rem;
    
    
     
   }
   
  
-  
+  .footer-name{
+    font-size:1.5rem
+  }
  
   
 
   
   .footer-number{
-    font-size:1.8rem;
+    font-size:1.6rem;
   
   }
   
@@ -738,6 +737,7 @@ a{
   
   .footer-contact{
    margin-bottom:3%;
+   font-size:1.3rem;
   }
   
   .about{
@@ -812,6 +812,63 @@ a{
     margin-top:1%;
   }
 
+  .reservations{
+    font-size:2.3rem;
 
+  }
 
+  .parag{
+    font-size:1.6rem;
+  }
+
+.paragraph{
+  font-size:1.4rem;
 }
+
+  label{
+    font-size:1rem;
+  }
+
+  .reservation-form input{
+  
+    width:35%;
+  }
+
+ 
+  .section{
+    font-size:1.5rem;
+  }
+  .div-button button{
+    padding:18px 44px;
+    margin-top:2%;
+  }
+  .dinner-header{
+    font-size:2.4rem;
+  }
+  .item-description{
+    font-size:1rem;
+  }
+  .background{
+    height:150vh;
+  }
+  .item{
+    font-size:1rem;
+  }
+
+  .wine-heading{
+    font-size:2.5rem;
+  }
+
+  .ant-table-thead{
+    font-size:1rem;
+    display:flex column;
+    
+  }
+
+
+  tr td{
+    font-size:1.4rem;
+  }
+  
+}
+
