more breakpoints done

--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@ table {
 	font-size: 1.2rem;
 	margin-top:3%;
   font-style: italic;
-  color: #F8F0E3;
+  color:  #fad6a5;
   font-weight:500;
 
 }
@@ -868,6 +868,671 @@ a{
 
   tr td{
     font-size:1.4rem;
+  }
+  
+}
+
+@media (min-width:600px){
+
+
+  
+  
+  .nav {
+    height:52vh;
+    display:inline-block;
+    overflow:hidden;
+    width:100%;
+
+  
+  }
+  
+  .nav-links {
+    display: block;
+    text-align:center;
+    margin-left:auto;
+    margin-right:auto;
+    width: 50%;    
+  }
+
+  .nav-links li{
+    margin:6%;
+  }
+  
+
+
+  
+
+
+
+  .carmslogo {
+    height: 10vh;
+    margin-top:3%;
+  }
+  
+   .container-img {
+ 
+    height: 65vh;
+    margin-bottom:7%;
+  } 
+  
+  .anim-h1{
+    font-size:2rem;
+ 
+    
+  }
+  
+  .anim-p{
+    font-size:1.5rem;
+  
+  }
+  
+  .anim-p2{
+   
+    font-size:1.5rem;
+  
+   
+  
+  }
+  
+  .anim-p3{
+   
+    font-size:1.5rem;
+  }
+  
+  .button-container{
+    
+    margin-top:9%;
+    
+  }
+  
+  
+  
+  .cta-menu{
+    padding:18px 18px;
+  
+  
+  }
+
+
+  
+  .wine-section{
+     
+      max-height: 100%;
+      font-size: 1rem;
+    
+  }
+  
+      table th{
+      font-size:1.2rem;      
+       
+  
+        
+      }
+  
+    
+      
+  .wine-heading{
+    margin-top:4%;
+    font-size:2.5rem;
+
+   
+  }
+    .ant-table-cell{
+      font-size:1.3rem;
+      font-weight:200;
+    }
+
+  .reservation-form input{
+    width:34%;
+  }
+ 
+  .reservations{
+    font-size:  3rem;
+
+  
+  }
+
+ .reservation-container p{
+   font-size:1.6rem;
+ }
+  
+  
+  
+  
+  .container{
+  
+    height: 90vh;
+   
+   
+  } 
+
+  
+  label{
+    font-size:1rem;
+    
+  }
+  
+  
+ 
+  
+  .div-button button{
+    margin-top:3%;
+    padding:18px 44px;
+    
+  }
+    .parag{
+      font-weight:500;
+     
+      margin-top:3%;
+     
+    }
+  
+  
+    .footer{
+      height:30vh;
+     
+   }
+  
+ 
+  
+ 
+    
+  
+  
+  
+  
+  .footer-name {
+    font-size:1.8rem;
+  }
+  
+  .footer-hours{
+    font-size:1.4rem;
+   
+  }
+  
+  .footer-number{
+    font-family: Italianno, serif;
+    font-size:1.5rem;
+  
+  }
+  
+
+  
+  .footer-contact{
+    font-family:serif;
+    font-size:1.2rem;
+  }
+  
+  .about{
+    font-family:Italianno, serif;
+    font-size:3rem;
+  }
+  
+ 
+  
+  .img{
+    border-radius:50%;
+    max-height:30vh;
+  }
+  
+  .about-paragraph{
+
+    font-weight:500;
+    font-family:Italiana;
+    font-size:1.3rem;
+    
+  }
+  .dinner-header{
+    font-weight:500;
+    font-size:2.6rem;
+    margin-bottom:5%;
+  }
+  
+  .background{
+   
+    height: 160vh;
+  }
+  
+  .section{
+ 
+    font-size:1.4rem;
+  
+  }
+  
+  .item{
+    font-size:1.2rem;
+ 
+  }
+  
+  .item-description{
+    font-family:Italiana;
+    font-weight:bold;
+    font-size:1rem;
+   
+  }
+
+}
+
+@media (min-width:800px) {
+  .nav {
+    display: flex;
+    background: #88bb63;
+    height: 15vh;
+    justify-content: space-around;
+    opacity: 0.8;
+    background:#800020;
+  }
+  
+  .nav-links {
+    display: flex;
+    justify-content: space-evenly;
+    width: 50%;
+    align-items: center;
+    list-style: none;
+    font-size: 1.5rem;
+    font-family: "Italianno", serif;
+    
+  }
+  
+  .nav-links li {
+    color: #e2725b;
+    font-size:2rem;
+    text-shadow: 2px 2px black;
+  }
+  
+  .nav-links li:hover{
+    color:gold;
+    
+  }
+  
+  .H2{
+    font-family: Italiana;
+    font-size: 1.2rem;
+    margin-top:3%;
+    font-style: italic;
+    color:  #fad6a5;
+    font-weight:500;
+  
+  }
+  
+  
+  .nav {
+    text-align: center;
+  }
+  
+  .carmslogo {
+    height: 15vh;
+  }
+  
+   .container-img {
+    background-repeat: no-repeat cover;
+    background-size: cover;
+    height: 100vh;
+    margin-top: 3%;
+    font-size: 2rem;
+  } 
+  
+  .anim-h1{
+    font-size:4.5rem;
+    color: #e2725b ;
+    font-family:Italianno;
+    font-weight:bold;
+    text-align:center;
+    color:#800020;
+    
+  }
+  
+  .anim-p{
+    text-align:center;
+    font-family:Italiana serif;
+    font-weight:400;
+    font-size:2.7rem;
+    color:#F8F0E3;
+  
+  }
+  
+  .anim-p2{
+    text-align:center;
+    margin-top:5% !important;
+    color:#F8F0E3;
+    font-weight:400;
+    font-family:Italiana serif;
+    font-size:2.7rem;
+  
+   
+  
+  }
+  
+  .anim-p3{
+    text-align:center;
+    margin-top:5%;
+    color:#F8F0E3;
+    font-family:Italiana serif;
+    font-weight:500;
+    font-size:2.7rem;
+  }
+  
+  .button-container{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    margin-top:5%;
+    
+  }
+  
+  
+  
+  .cta-menu{
+    text-align:center;
+    padding:24px 36px;
+    border-radius:15px;
+    background:#800020;
+    font-family:Italianno serif;
+    font-size:1.5rem;
+    color:#e2725b;
+    font-style:italic;
+  
+  }
+  
+  .cta-menu:hover{
+    color:grey;
+    background:blanchedalmond;
+  
+  }
+  
+  .Link{
+    text-decoration: none;
+  }
+  
+  .wine-section{
+      background-repeat: no-repeat cover;
+      background-size:cover;
+      max-height: 100%;
+      margin-top: 3%;
+      font-size: 1.5rem;
+      text-align:center;
+      display:flex;
+      justify-content: center;
+      color:beige;
+  }
+  
+      table th{
+        padding: 3rem;
+        color:grey;      
+       
+  
+        
+      }
+  
+      table td{
+        padding:10px;
+        font-weight:bold;
+        font-family:Italianno;
+        font-size:2.3rem;
+        color:#F7E7CE;
+      }
+      
+  .wine-heading{
+    font-weight:bold;
+    font-family:Italianno;
+    font-size:4rem;
+    color:#e2725b;
+    text-align:center;
+   
+  }
+    .wine{
+      font-size:3rem;
+      font-family:Italianno;
+      font-weight:500;
+      margin-top:3%;
+      color:#9A3B4E;
+    }
+  
+  .reservation-form input{
+    display:flex column;
+    justify-content:center;
+    align-items:center;
+  }
+  .reservations{
+    font-size:4rem;
+    text-align:center;
+    font-weight:bold;
+    font-family:Italianno;
+    max-height:15vh;
+    margin-top:5%;
+  
+  }
+  .reservation-container{
+    background:beige;
+  
+  
+  }
+  
+  
+  
+  
+  
+  .container{
+    background-repeat: no-repeat cover;
+    background-size: cover;
+    height: 130vh;
+    font-size: 2rem;
+   
+   
+  } 
+  .form-div .reservation-form{
+    display:flex column;
+    justify-content:center;
+    align-items:center;
+    height:50vh;
+    margin-top:4%;
+    width:100%;
+    
+  
+  }
+  
+  input{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    text-align:center;
+    margin-left:auto;
+    margin-right:auto;
+    width:18%;
+    height:5vh;
+    
+  }
+  
+  
+  
+  
+  
+  .paragraph{
+    font-size:2.5rem;
+    color: #99334D;
+    text-align:center;
+    font-family:Italiana,serif;
+    font-weight:500;
+    font-style:italic;
+    margin-top:4%;
+  
+    
+  
+  }
+  
+  label{
+    color:#F5F5DC;
+    font-size:1.4rem;
+    display:flex;
+    justify-content:center;
+    margin:1%;
+    font-weight:bold;
+  }
+  
+  
+  .div-button{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    margin-top:4%;
+  
+  }
+  
+  .div-button button{
+    padding:22px 100px;
+    border-radius:15px;
+    background:#E2725B;
+    opacity:.7;
+    color:beige;
+  }
+  .div-button button:hover{
+    background:beige;
+    color:#E2725B;
+  }
+    .parag{
+      font-size:2rem;
+      font-weight:500;
+      font-family:Italianno;
+      text-align:center;
+      margin-top:3%;
+      background-color:beige;
+    }
+  
+  
+    .footer-section{
+      background:#99334C;
+      height:20vh;
+      display:flex column;
+      outline:3px solid blue;
+   }
+  
+  .carms{
+    display:flex column;
+    justify-content:center;
+    align-items:center;
+  }
+  
+  .footer{
+    background:#fad6a5;
+    opacity:.8;
+    font-size:1.5rem;
+    display:flex column;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    color:#b11226;
+    font-weight:bold;
+    margin-top:3%;
+    max-height:50vh !important;
+    
+  }
+  
+  a{
+    text-decoration:none;
+    color:#800020;
+  }
+  
+  .footer-name {
+    font-family: Italianno, serif;
+    font-size:2rem;
+    margin-bottom:1%;
+    margin-top:4%;
+  }
+  
+  .footer-hours{
+    font-family:Italiana, serif;
+    font-style:italic;
+    margin-bottom:1%;
+    padding:1%;
+  }
+  
+  .footer-number{
+    font-family: Italianno, serif;
+    font-size:2rem;
+    margin-bottom:1%;
+  
+  }
+  
+  .copyright{
+    margin-top:2%;
+  }
+  
+  .footer-contact{
+    font-family: serif;
+    font-size:1.5rem;
+    font-style:italic;
+  }
+  
+  .about{
+    font-family:Italianno, serif;
+    font-weight:bold;
+    font-size: 5rem;
+    text-align:center;
+    margin-top:4%;
+    color:#99324C;
+  }
+  
+  .img-container{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+  }
+  
+  .img{
+    border-radius:50%;
+    max-height:50vh;
+  }
+  
+  .about-paragraph{
+    text-align:center;
+    margin-top:4%;
+    font-weight:bold;
+    font-family:Italiana;
+    font-size:1.5rem;
+    font-style:italic;
+    color:#99334C;
+  }
+  .dinner-header{
+    margin-top:5%;
+    text-align:center;
+    font-family:Italianno;
+    font-weight:bold;
+    font-size:4rem;
+    color:#e2725b;
+  }
+  
+  .background{
+    background-repeat: no-repeat cover;
+    background-size: cover;
+    height: 290vh;
+  }
+  
+  .section{
+    font-family:Italiana, serif;
+    font-weight:bold;
+    font-style:italic;
+    font-size:1.8rem;
+    color:#FADEB6;
+    text-align:center;
+    margin-top:3%;
+  
+  }
+  
+  .item{
+    font-size:1.5rem;
+    text-align:center;
+    margin-top:2%;
+    color:#8b0000;
+    font-weight: bold;
+  }
+  
+  .item-description{
+    font-family:Italiana;
+    font-weight:bold;
+    font-size:1rem;
+    color:white;
+    text-align:center;
+    margin-top:1%;
   }
   
 }
