--- a/src/App.css
+++ b/src/App.css
@@ -292,7 +292,7 @@ input{
 
 .paragraph{
   font-size:2.5rem;
-  color: #99334D;
+  color: #f7e7ce !important;
   text-align:center;
   font-family:Italiana,serif;
   font-weight:500;
@@ -328,7 +328,7 @@ label{
   opacity:.7;
   color:beige;
 }
-.div-button button:hover{
+.div-button .btn:hover{
   background:beige;
   color:#E2725B;
 }
@@ -346,7 +346,6 @@ label{
     background:#99334C;
     height:20vh;
     display:flex column;
-    outline:3px solid blue;
  }
 
 .carms{
@@ -445,11 +444,15 @@ a{
 }
 
 .background{
-  background-repeat: no-repeat cover;
-  background-size: cover;
-  height: 290vh;
+  background-repeat: no-repeat;
+  background-size:100% 100%;
 }
-
+.meal{
+  margin-top:3%;
+  font-size:1.6rem;
+  color:#C3644B;
+  text-align:center;
+}
 .section{
   font-family:Italiana, serif;
   font-weight:bold;
@@ -478,15 +481,14 @@ a{
   margin-top:1%;
 }
 
-@media (max-width: 599px){
+/* @media (max-width: 480px){
 
  
 
   .nav {
     
-    height:35vh;
+    height:60vh;
     display:inline-block;
-    overflow:hidden;
     width:100%;
   
   }
@@ -496,6 +498,7 @@ a{
     height:20vh;
   }
   .nav-links {
+    display:inline-block;
     margin-top:10%;
     width: 100%;
     font-family: "Italianno", serif;
@@ -503,7 +506,7 @@ a{
   }
   
   .nav-links li {
-    font-size:2rem;
+    margin:4%;
     
   }
   
@@ -623,7 +626,7 @@ a{
   .container{
     background-repeat: no-repeat cover;
     background-size: cover;
-    height: 130vh;
+    height: 80vh;
     font-size: 2rem;
    
    
@@ -656,13 +659,8 @@ a{
   
   
   .paragraph{
-    font-size:2.5rem;
-    color: #99334D;
-    text-align:center;
-    font-family:Italiana,serif;
-    font-weight:500;
-    font-style:italic;
-    margin-top:4%;
+    font-size:1.5rem !important;
+
   
     
   
@@ -698,12 +696,8 @@ a{
     color:#E2725B;
   }
     .parag{
-      font-size:2rem;
-      font-weight:500;
-      font-family:Italianno;
-      text-align:center;
-      margin-top:3%;
-      background-color:beige;
+      font-size:1.7rem !important;
+  
     }
   
 
@@ -742,12 +736,9 @@ a{
   }
   
   .about{
-    font-family:Italianno, serif;
     font-weight:bold;
-    font-size: 5rem;
-    text-align:center;
-    margin-top:4%;
-    color:#99324C;
+    font-size: 2.5rem;
+   
   }
   
   .img-container{
@@ -758,17 +749,11 @@ a{
   
   .img{
     border-radius:50%;
-    max-height:50vh;
+    max-height:30vh;
   }
   
   .about-paragraph{
-    text-align:center;
-    margin-top:4%;
-    font-weight:bold;
-    font-family:Italiana;
-    font-size:1.5rem;
-    font-style:italic;
-    color:#99334C;
+    font-size:1rem;
   }
   .dinner-header{
     margin-top:5%;
@@ -811,6 +796,13 @@ a{
     color:white;
     text-align:center;
     margin-top:1%;
+  }
+
+  .meal{
+    font-size:1.2rem;
+    color:#da562f;
+    margin-top:7%;
+    text-align:center;
   }
 
   .reservations{
@@ -866,104 +858,26 @@ a{
     
   }
 
-
+  
   tr td{
-    font-size:1.4rem;
+    font-size:1.3rem;
   }
+
+ 
   
 }
+ */
 
 
-@media (min-width: 400px){
-  
-  .about-paragraph{
-    font-size:1rem;
-  }
 
-  .about{
-    font-size:2.5rem;
-  }
-
-  .nav{
-    height:56vh;
-    
-  }
-  
-  .nav-links{
-    display: block;
-    text-align:center;
-    margin-left:auto;
-    margin-right:auto;
-    width: 50%;    
-  }
-  .nav-links li{
-    margin-bottom:8%;
-  }
-  .paragraph{
-    font-weight:400;
-  }
-
-  .div-button{
-    margin-top:5%;
-  }
-
-  .div-button button{
-    padding:18px 22px;
-  }
-
-
-  .section{
-    font-size:1.2rem;
-
-  }
-  .item{
-    font-size:.8rem;
-  }
-
-  .item-description{
-    font-size:.6rem;
-  }
-  .background{
-    height:180vh;
-  }
-
-  .meal{
-    font-size:.9rem;
-    color:#e5d8b6;
-    text-align:center;
-    margin-top:3%;
-
-  }
-  .ant-table-cell{
-    display:flex row;
-    justify-content: flex-start;
-    align-items:center;
-    width:30%;
-
-
-  }
-
-  .container{
-    height:85vh;
-  }
-  .background{
-    height:105vh;
-  }
-
-  .meal{
-    margin-top:5%;
-  }
-}
-
-@media (min-width:600px){
+/* @media (min-width:768px){
 
 
   
   
   .nav {
-    height:50vh;
+    height:55vh !important;
     display:inline-block;
-    overflow:hidden;
     width:100%;
 
   
@@ -1056,13 +970,13 @@ a{
       
   .wine-heading{
     margin-top:4%;
-    font-size:2.5rem;
+    font-size:3rem;
 
    
   }
     .ant-table-cell{
-      font-size:1.3rem;
-      font-weight:200;
+      font-size:1.7rem;
+      font-weight:400;
     }
 
   .reservation-form input{
@@ -1103,20 +1017,23 @@ a{
     padding:18px 44px;
     
   }
+    .reservations{
+      font-size:3rem !important;
+    }
+
     .parag{
-      font-weight:500;
-     
-      margin-top:3%;
-     
+      font-size:1.8rem;
     }
   
   
     .footer{
-      height:30vh;
+      height:30vh !important;
      
    }
   
- 
+   .footer-contact a{
+     font-size:1.4rem;
+   }
   
  
     
@@ -1173,7 +1090,7 @@ a{
   
   .background{
    
-    height: 160vh;
+    height: 170vh !important;
   }
   
   .section{
@@ -1181,9 +1098,19 @@ a{
     font-size:1.4rem;
   
   }
+
+  .meal{
+    font-size:1.2rem;
+    margin-top:5%;
+    color:#da562f;
+    text-align:center;
+
+
+
+  }
   
   .item{
-    font-size:1.2rem;
+    font-size:1.4rem;
  
   }
   
@@ -1198,230 +1125,22 @@ a{
     height:62vh;
   }
 
-}
+} */
 
-@media (min-width:800px) {
-  .nav{
-    height:85vh;
-  }
-  .nav-links {
-    display: flex column;
-    justify-content: space-evenly;
-  
-   
-    
-  }
-  
-  .meal{
-    font-size:1.1rem;
-    text-align:center;
-    margin-top:6%;
-    color:#ebd8b0;
-    font-weight:bold;
-  }
-  
 
-    
-  
-  
-  .H2{
-    font-size: 1.4rem;
-    margin-top:3%;
- 
-  
-  }
-  
-  
-
-  
-
-  
-   .container-img {
-  
-    height: 80vh;
-   
-  } 
-  
-  .anim-h1{
-    font-size:2.8rem;
- 
-    
-  }
-  
-  .anim-p{
-   
-    font-size:2rem;
-  
-  }
-  
-  .anim-p2{
- 
-    font-size:2rem;
-  
-   
-  
-  }
-  
-  .anim-p3{
-  
-    font-size:2rem;
-  }
-  
-  .button-container{
-
-    margin-top:7%;
-    
-  }
-  
-  
-  
-  .cta-menu{
-    padding:18px 30px;
-    
-  
-  }
-  
-  
-  
-  
-
-  
-      table th{
-        padding: 3rem;
-        color:grey;      
-       
-  
-        
-      }
-  
-   
-  .wine-heading{
-    font-weight:500;
-    font-size:3rem;
-  
-   
-  }
-
-  .ant-table-row td{
-    font-size:1.9rem;
-  }
-  
-  .reservation-form label{
-    font-size:1rem;
-  }
- 
-  .reservations{
-    font-size:3rem;
-    
-  
-  }
- 
-  
-    
-  
-  
-  
-  
-  .container{
-
-    height: 100vh;
-    font-size: 2rem;
-   
-   
-  } 
-
-  
-
-  
-  
-  
-  
-  
-  .paragraph{
-    font-size:1.8rem !important;
- 
-  
-    
-  
-  }
-  
-
-  
- 
-  
-  .div-button button{
-    padding:22px 90px;
-   
-  }
-  
-  
-  
-    
-  
-  .about{
-    font-family:Italianno, serif;
-    font-weight:bold;
-    font-size: 4rem;
-    text-align:center;
-    margin-top:4%;
-    color:#99324C;
-  }
-  
-  .img-container{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-  }
-  
-  .img{
-    border-radius:50%;
-    max-height:50vh;
-  }
-  
-  .about-paragraph{
-
-    font-size:1.3em;
-    
-  }
-  .dinner-header{
-    font-weight:bold;
-    font-size:3rem;
-  }
-  
-  .background{
-  
-    height: 180vh;
-  }
-  
-
-  
-  .item{
-    font-size:1.1rem;
-   
-  
-  }
-  .section{
-    font-size:1.5rem;
-  }
-  
-  
-}
-
-@media (min-width: 1000px) {
-
+@media screen and (min-device-width: 1200px) {
 
   .nav {
     display: flex;
     background: #88bb63;
-    height: 15vh;
-    justify-content: space-around;
-    opacity: 0.8;
+    height: 15vh !important;
+    justify-content: space-evenly !important;
     background:#800020;
   }
   
   .nav-links {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 50%;
     align-items: center;
     list-style: none;
@@ -1441,6 +1160,16 @@ a{
     
   }
 
+  .container-img{
+    height:110vh;
+  }
+  
+  .anim-h1{
+    font-size:4rem;
+  }
+
+
+
   .H2{
     margin:auto;
   }
@@ -1448,224 +1177,40 @@ a{
   .carmslogo{
     margin:auto;
   }
-
+  .footer{
+    height:50vh;
+  }
+ 
+  .wine-heading{
+    font-size:4rem;
+  }
   .meal{
     margin-top:3%;
     text-align:center;
     font-size:1.4rem;
     color:#E5D8B6
   }
-
-  .about-paragraph{
-
-    font-size:1.6rem;
-  }
-}
-
-@media(min-width:1200px){
-
-  .anim-h1{
+  .about{
     font-size:4rem;
   }
+  .about-paragraph{
 
- .anim-p{
-   font-size:2.7rem;
- }
-
- .anim-p2{
-   font-size:2.5rem;
- }
-
- .anim-p3{
-   font-size:2.6rem;
- }
-
- .reservations{
-   font-size:4rem;
- }
-
- .parag{
-   font-size:2.5rem !important;
- }
+    font-size:1.5rem;
+  }
+  .img{
+    width:500px;
+  }
 
  .paragraph{
    font-size:2rem !important;
-   font-weight:600;
+   font-weight:bold;
+   color:#C3644B !important;
  }
- .background{
-   height:230vh;
+ .btn{
+   padding:18px 48px !important;
  }
- .section{
-   font-size:2rem;
+ .container{
+   background-size:100% cover!important;
  }
-
- .dinner-header{
-   font-size:4rem;
- }
-
- .item{
-   font-size:1.5rem;
- }
-
- .item-description{
-   font-size:1.3rem;
- }
-
- .wine-heading{
-   font-size:4rem;
- }
-
-
- .ant-table-cell{
-   font-size:2rem;
- }
-
- .about-paragraph{
-   font-size:1.4rem;
-   margin:auto;
- }
-
 }
 
-@media (min-width:1400px) {
-
-  .container-img{
-    height:90vh;
-  }
-
- .form-div label{
-   font-size:1.3rem !important;
- }
-
- .form-div input{
-   width:23%;
- }
-
- .div-button button{
-   padding:24px 100px;
-
-   
-  
- }
-
- .background{
-   background:cover no-repeat;
-   height:250vh;
- }
-
-
-
-
-
-
-
-
-}
-
-@media (min-width:1600px) {
-
-
-
-  
-  .H2{
-    font-size: 1.4rem;
-  
-  }
-  
-
-  
-  .carmslogo {
-    height: 15vh;
-  }
-  
-   .container-img {
-
-    height: 100vh;
-    margin-top: 5%;
-   
-  } 
-  
-  .anim-h1{
-    font-size:5rem;
-   
-  }
-  
-  .anim-p{
-    text-align:center;
-    font-family:Italiana serif;
-    font-weight:400;
-    font-size:2.7rem;
-    color:#F8F0E3;
-  
-  }
-  
-  
-
-  
-  
-  
-
-  
-
-  
-  
-
-  
-  
-  
-
-  
-  
-  
-  
-  
- 
-  
-
- 
-  
-
-  
-  
-    .footer{
-      height:35vh;
-   }
-  
-  .carms{
-    display:flex column;
-    justify-content:center;
-    align-items:center;
-  }
-  
-
-  
- 
-  
-
-
-  .about-paragraph{
-  
-    font-size:2rem  !important;
-   
-  }
-
-  
-  .background{
-    background:no-repeat cover !important; 
-    height:260vh;
-  }
-
-
-  
-
-  
-
-
-
-
-
-
-
-
-
-}
